# rf-code

./: .gitignore  Dockerfile  README.md  default.nix  flake.nix  lock.json  pyproject.toml
blogger/: blogger.py  feyenoord-ajax_2024-06-08.yaml  feyenoord-ajax_2024-06-10.yaml  pyproject.toml
blogger/blogger/: __init__.py
blogger/blogger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
matchcenterai/: pyproject.toml
matchcenterai/matchcenterai/: __init__.py
rf-voice-to-blog/: __index__.py  audio.py  audio_consumers.py  backup  blogger.py  config.py  getData.py  gpt.py  keywords-ajax.yaml  keywords-feyenoord.sync-conflict-20240603-211315-GY37G3C.yaml  keywords-feyenoord.yaml  keywords.yaml  main.py  replacements-ajax.yaml  replacements-feyenoord.yaml  replacements.yaml  threads.py
rf-voice-to-blog/3/: audio_consumers.py  blogger.py  config.py  main.py  shared.py  transcriber.py
rf-voice-to-blog/iterations/: 2.py
src/: audio.py  blogger.py  config.py  handleYaml.py  main.py  summarizer.py
summarizer/: pyproject.toml
summarizer/summarizer/: __init__.py  audio.py  config.py  handleYaml.py  main.py  state.py  threads.py  writer.py
summarizer/summarizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
summarizer/summarizer/transcription-configs/: keywords-ajax.yaml  keywords-feyenoord.yaml
