[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "blogger"
version = "0.1.0"
authors = [{ name = "Koen Benne", email = "koen.benne@iodigital.com" }]

dependencies = [
  "summarizer",
  "PyAudio",
  "pyyaml",
  "fastapi",
  "uvicorn",
]

[project.scripts]
blogger = "blogger:main"
