[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "summarizer"
version = "0.1.0"
description = "A python package that uses live Dutch Feyenoord football commentary stream audio to write incremental summaries of the ongoing match."
authors = [{ name = "Koen Benne", email = "koen.benne@iodigital.com" }]

dependencies = [
  "PyAudio==0.2.14",
  "cffi==1.16.0",
  "deepgram-sdk==3.2.7",
  "pyyaml==6.0.1",
  "openai==1.25.1"
]

